# numerical_analysis

./: bron_kerbosch.py  data.py  fit_archimedean_copula.py  hierarchical_clustering_dissimilarity_matrix.py  max_volumes.ipynb  misc.py  optimal_OU_trading_and_MTP.ipynb  pandas_manips.ipynb  pandas_rolling.ipynb  residual_returns_based_mean_reverting_arbitrage.ipynb  scrape_wiki_table.py  simple_pairs_trading.ipynb  utils.py
MPO/: algos.py  auxiliary_functions.py  dev.ipynb  proximal_operators.py  test.py  test_performances.ipynb
internships_pairs_trading/: archimedean_copulas.py  cdf.ipynb  copulas.ipynb  examples_misc.py  fit_archimedean_copula.ipynb  pairs_trading.ipynb  pca_factors_model.py  simple_pairs_trading.ipynb  trading_with_archimedean_copulas.ipynb
mpo/: deprecated_dev.ipynb  deprecated_test_algos_performances.ipynb  optim_algos.py  proximal_operators.py  test_projs_simplex.ipynb  test_utils.py  utils.py
nearcorrmat/: .gitignore  README.md  README.tex  pyproject.toml  setup.py
nearcorrmat/nearcorrmat/: functions.py
nearcorrmat/tests/: performances.ipynb  test_nearcorrmat.py
nearest_corr_mat/: .gitignore  LICENSE  MANIFEST.in  README.md  README.tex  pyproject.toml  setup.cfg
nearest_corr_mat/nearest_correlation_matrix/tests/: test.py
nearest_corr_mat/src/near_corr_mat/: functions.py
nearest_corr_mat/src/near_corr_mat/tests/: performances.ipynb  performances_low_rank.ipynb  test.py
nearest_corr_mat/src/nearcorrmat/: functions.py
nearest_corr_mat/src/nearest_corr_mat_pkg/: functions.py
nearest_corr_mat/src/nearest_corr_mat_pkg/tests/: performances.ipynb
nearest_corr_mat/tests/: performances_low_rank.ipynb  test.py
optim/: constrained_lstsq.ipynb  nnls_ccd.py  proj_simplex.ipynb  proximal_operators_and_gradients.py  proximal_operators_tests.py  signal_preprocessing.ipynb  yahoo_finance.ipynb
scraping/: currencies.py  filmography_from_wiki_tables.py  imdb.py  match_text.py  pyproject.toml  reusable.py  scrape_wiki_table.py
(+8 files in other folders)
