[tool.poetry]
name = "nearcorrmat"
version = "0.1.0"
description = "Find the nearest correlation matrix to a given one"
authors = ["Thibault Bourgeron <thibault.bourgeron@protonmail.com>"]
maintainers = ["Thibault Bourgeron <thibault.bourgeron@protonmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["optimization", "correlation matrix", "euclidian norm", "dual", "primal", "Newton", "BFGS", "L-BFGS", "ADMM", "gradient", "Dijkstra"]
include = [ "README.tex", "README.pdf", "tests/*"]

packages = [
    { include = "nearcorrmat" }
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
