[metadata]
name = nearest_corr_mat_pkg-bourgeron
version = 0.0.1
author = Thibault Bourgeron
author_email = thibault.bourgeron@protonmail.com
description = Algorithms to project on the nearest correlation matrix
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bourgeron/numerical_analysis/tree/master/nearest_corr_mat
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src